[package]
name = "haiku"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"

[dependencies.keystone]
# the kind folks at keystone have yet to actually publish the
# version from their github that works.
# https://github.com/keystone-engine/keystone/issues/418
git = "https://github.com/keystone-engine/keystone"
rev = "c4de98f71f05f356817f5e91fee0d509c7b0b440"
